# ai-book-stuff

./: Cargo.toml  test.txt
.devcontainer/: devcontainer.json
src/: main.rs
