[package]
name = "ai-book-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.19.0"
regex = "1.7"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true
